fixed work label font-size on mobile

--- a/styles/utility/mediaqueries.sass
+++ b/styles/utility/mediaqueries.sass
@@ -576,6 +576,8 @@
 			main
 				.columns .column .categories
 					height: calc(100vw - 50px)
+					p
+						font-size: rem(14px)
 
 // MOBILE-M: UP TO 375
 @media screen and (max-width: $mobile-m)
